scss/components/_banner-search.scss
%banner-search__block,
.banner-search__block {
  text-decoration: none;
}

%banner-search__form,
.banner-search__form {
  display: block;
  width: 100%;
}

%banner-search__item-wrapper,
.banner-search__item-wrapper {
  display: block;

  &:before {
    @include font(icon, solid);
    position: absolute;
    top: 17px;
    left: 22px;
    color: $medium-gray;
    content: '\f002';
  }
}

%banner-search__input,
.banner-search__input {
  margin-bottom: 0;
  border: 1px solid $medium-gray;
  border-radius: 50px;
  background-color: $white;
  padding-left: 48px;
  width: 100%;
  height: 50px;
  line-height: 1em;
  color: $text;
  font-size: 16px;
  box-sizing: border-box;

  &:focus {
    outline: none;
    border: 2px solid $primary;
  }

  &::placeholder {
    content: 'Search';
  }

}

// Extend proper styles onto default Drupal classes.
.search-block-form {
  @extend %banner-search__block;

  form {
    @extend %banner-search__form;
  }

  .form-item {
    @extend %banner-search__item-wrapper;
  }

  input {
    &[type='search'] {
      @extend %banner-search__input;
    }

    &[type='submit'] {
      display: none;
    }
  }

}

